--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </label>
   </fieldset>
   <fieldset>
-  <label>Is my friend Matthew Large?
+  <label>Will I be able to land an internship for Summer '24?
   <select id="dropdown">
     <option name="" value="0">Select one</option>
     <option name="radio" value="yes">Yes</option>
@@ -27,17 +27,17 @@
   </label>
   </fieldset>
   <fieldset>
-    <legend>Does John know what a skibidi bop is? </legend>
-    <label for="perhaps">perhaps<input id="perhaps" type="radio" value="perhaps" name="skibidi" ></input></label>
-    <label for="wtf">what the frick is a skibidi bop <input id="wtf" type="radio" checked class="inline" name="skibidi" value="wtf">
+    <legend>Will I get my Responsive Web Design Certification within the next 2 weeks? </legend>
+    <label for="perhaps">Maybe<input id="perhaps" type="radio" value="perhaps" name="perhaps" ></input></label>
+    <label for="work">Gotta put that work in <input id="work" type="radio" checked class="inline" name="perhaps" value="work">
     </label>
   </fieldset>
   <fieldset>
-    <legend>Should the boys start grinding season 18 APEX?</legend>
+    <legend>Should the boys start playing season 18 APEX?</legend>
     <label for="yes">yes<input id="yes" type="checkbox" value="yes" checked/></label>
     <label for="no">no<input id="no" type="checkbox" value="no" /></label>
   </fieldset>
-  <legend>Additional Comments about John or Matthew my best friends?</legend>
+  <legend>Additional Comments about O.G. Fortnite coming back?</legend>
  <textarea></textarea>
  <button id="submit" type="submit">SUBMIT</button>
 </form>
